data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1394.wast
;; 5. **Test: Invalid Type in Operand Stack for `br_if`**:    - **Description**: Test `br_if` execution when the stack contains operands of incorrect types relative to the expected types before the condition check.    - **Constraint Checked**: Ensures operand stack types match the expected types before `br_if`.    - **Relation to Incorrect Branch Target Resolution**: Prevents incorrect branch resolutions due to type mismatches, ensuring accurate control flow.

(assert_invalid
  (module
    (func $invalid-type-operand-stack
      (block (result i32)
        (i64.const 1)    ;; Push i64 instead of i32 onto the stack
        (br_if 0 (i32.const 0))  ;; Incorrect type on the stack, expecting i32
      )
    )
  )
  "type mismatch"
)